# rust-webapp-template

./: .gitignore  Cargo.toml  Makefile  README.md  README.org  cargo-generate.toml
.cargo-generate/: post-hook.rhai
.cargo-generate/templates/cli-tool/: Cargo.toml
.cargo-generate/templates/cli-tool/src/: application.rs  main.rs  plugins.rs
.cargo-generate/templates/db_postgres/: .env  Cargo.toml
.cargo-generate/templates/db_postgres/migrations/2023-10-18-111111_core/: down.sql  up.sql
.cargo-generate/templates/db_postgres/src/: db.rs  lib.rs
.cargo-generate/templates/plugin/: Cargo.toml
.cargo-generate/templates/plugin/src/: api_main.rs  lib.rs
.cargo-generate/templates/user-core/: Cargo.toml  cargo-generate-pre.rhai  cargo-generate.toml
.cargo-generate/templates/user-core/src/: api.rs  lib.rs  user.rs
.cargo-generate/templates/user-core/src/db/: user.rs  user_session.rs
.cargo-generate/templates/user-password-auth/: Cargo.toml  cargo-generate-pre.rhai
.cargo-generate/templates/user-password-auth/doc/migrations/2023-11-20-171213_user_password/: down.sql
.cargo-generate/templates/user-password-auth/src/: api.rs  lib.rs
.cargo-generate/templates/user-password-auth/src/db/: user_password.rs
.cargo-generate/templates/webapp/: Cargo.toml
.cargo-generate/templates/webapp/src/: main.rs  plugins.rs  webapp_run.rs
app_core_template/: Cargo.toml
app_core_template/etc/: config.example.yaml
app_core_template/src/: plugins.rs  webapp_run.rs
database_pg/: Cargo.toml
database_pg/src/: lib.rs  paginate.rs  secstr.rs  sync.rs
database_pg_plugin_template/: Cargo.toml
database_pg_plugin_template/src/: lib.rs
doc/example-configs/: core.yaml  main_db.yaml  test.yaml  user_password_auth.yaml
react-admin/: Cargo.toml
react-admin/src/: db.rs  lib.rs  request_list.rs
src/: config.rs  main.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
user-core/: Cargo.toml
user-core/doc/migrations/2023-10-19-180742_user-core/: down.sql  up.sql
user-core/src/: api.rs  lib.rs  user.rs
user-core/src/db/: user.rs  user_session.rs
user-password-auth/: Cargo.toml
user-password-auth/doc/: README.org
user-password-auth/doc/migrations/2023-11-20-171213_user_password/: up.sql
user-password-auth/src/: api.rs  config.rs  lib.rs
user-password-auth/src/db/: mod.rs  user_password.rs
webapp_core/: Cargo.toml
webapp_core/src/: apidoc.rs  config.rs  lib.rs  logging.rs  plugin.rs  response.rs  secstr.rs
webapp_yaml_config/: Cargo.toml
webapp_yaml_config/src/: lib.rs  secret.rs  url.rs  yaml.rs
