[package]
authors = ["{{authors}}"]
edition = "2021"
name = "{{project-name}}"
version = "0.1.0"
rust-version = "1.65"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-syslog = {git = "https://github.com/johnlepikhin/syslog/tree/fix/loglevel-compare", branch = "fix/loglevel-compare" }
structdoc = "0.1.4"
