
[profile.release]

lto = true

[profile.fastdev]

inherits = "dev"
opt-level = 0
debug = false

[workspace]

resolver = "2"

members = [
  "app_core_template",
  # TODO
  # "{{project-name}}",
  "webapp_core",
  "webapp_yaml_config",
  "database_pg",
  "database_pg_plugin_template",
  # TODO
  "test_plugin",
]
