[package]

authors = ["{{authors}}"]
edition = "2021"
name = "app_core_template"
# TODO
# name = "{{project-name}}"
version = "0.1.0"
rust-version = "1.70"
license = "{{LICENSE}}"

[dependencies]

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-syslog = { git = "https://github.com/johnlepikhin/syslog", branch = "fix/loglevel-compare" }
structdoc = "0.1.4"
actix-web = { version = "4.4" }
#tokio-schedule = "0.3.1"

webapp_core = { path = "../webapp_core" }
test_plugin = { path = "../test_plugin" }
database_pg_plugin_template = { path = "../database_pg_plugin_template" }
