[package]
name = "react-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
diesel = { version = "2.1.4", features = ["postgres"] }
futures = "0.3.29"
futures-util = "0.3.29"
serde = "1.0.193"
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
utoipa = "4.1.0"
