[package]
name = "test_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4.4" }
structdoc = "0.1.4"
slog-scope = "4.4"

webapp_yaml_config = { path = "../webapp_yaml_config" }
webapp_core = { path = "../webapp_core" }
