[package]
name = "user-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4.4", features = ["cookies"] }
structdoc = "0.1.4"
slog-scope = "4.4"
async-trait = "0.1.73"
diesel = { version = "2.1", features = ["chrono", "ipnet-address" ] }
webapp_core = { path = "../webapp_core" }
database_pg = { path = "../database_pg" }
test-db = { path = "../test-db" }
chrono = "0.4.31"
futures-util = "0.3.28"
ipnet = "2.9.0"
actix-http = "3.4.0"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
rand = "0.8.5"
secstr = "0.5.1"
