[package]
name = "webapp_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4.4" }
structdoc = "0.1.4"
slog = "2.7"
slog-scope = "4.4"
slog-scope-futures = "0.1"
slog-async = "2.8"
slog-envlogger = "2.2"
sloggers = { version = "2.1", features = [ "slog-json" ] }
actix-web-requestid = "2.1"

webapp_yaml_config = { path = "../webapp_yaml_config" }
async-trait = "0.1.73"
