[package]

authors = ["{{authors}}"]
edition = "2021"
name = "{{project-name}}"
version = "0.1.0"
rust-version = "1.70"
license = ""

[dependencies]

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
actix-web = { version = "4.4" }
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
webapp_core = { path = "../webapp_core" }

[package.metadata.deb]
assets = [
  [ "target/release/{{project-name}}", "usr/bin/", "755" ],
]
