[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4.4" }
structdoc = "0.1.4"
async-trait = "0.1.73"

webapp_yaml_config = { path = "../webapp_yaml_config" }
webapp_core = { path = "../webapp_core" }
utoipa = { version = "4.1.0", features = ["actix_extras"] }
tracing = "0.1.40"
