[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4.4", features = ["cookies"] }
structdoc = "0.1.4"
async-trait = "0.1.73"
diesel = { version = "2.1", features = ["chrono", "ipnet-address" ] }
webapp_core = { path = "../webapp_core" }
{{db-plugin}} = { path = "../{{db-plugin}}" }
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3.28"
ipnet = "2.9.0"
actix-http = "3.4.0"
utoipa = { version = "4.1.0", features = ["actix_extras", "chrono"] }
rand = "0.8.5"
secstr = "0.5.1"
react-admin = { path = "../react-admin" }
database_pg = { path = "../database_pg" }
tracing = "0.1.40"