[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
actix-web = { version = "4.4", features = ["cookies"] }
async-trait = "0.1.73"
diesel = { version = "2.1", features = ["chrono", "ipnet-address" ] }
webapp_core = { path = "../webapp_core" }
{{db-plugin}} = { path = "../{{db_plugin}}" }
chrono = "0.4.31"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
serde = { version = "1.0", features = ["derive"] }
structdoc = "0.1.4"
webapp_yaml_config = { path = "../webapp_yaml_config" }
database_pg = { path = "../database_pg" }
{{user-core-plugin}} = { path = "../{{user-core_plugin}}" }
rand_core = "0.6.4"
argon2 = "0.5.2"
secstr = "0.5.1"
actix-http = "3.4.0"
slog-scope = "4.4.0"
